--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  color: white;
+}
+
+body {
+  background: #1D272F url('https://dd6zx4ibq538k.cloudfront.net/static/images/2395/1e3712670769229210f9f8bac4e67fac_1349_1200.png') no-repeat;
+  background-position: right 0 top 0;
+}
+
+.main {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+header {
+  border-bottom: 1px solid;
+  background: blue;
+  width: 100%;
+  height: 100px;
+}
+
